# jogasaki

./: .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/aggregate_cli/: CMakeLists.txt  cli_constants.h  consumer_flow.h  consumer_process.h  consumer_task.h  main.cpp  params.h  producer_flow.h  producer_params.h  producer_process.h  producer_task.h
examples/bootstrap/: CMakeLists.txt  backend.cpp  server.h  utils.cpp  utils.h
examples/client_cli/: CMakeLists.txt  main.cpp
examples/cogroup_cli/: CMakeLists.txt  cli_constants.h  cogroup_flow.h  cogroup_process.h  cogroup_task.h  consumer_flow.h  consumer_process.h  consumer_task.h  main.cpp  params.h  priority_queue_consumer_task.h  producer_flow.h  producer_params.h  producer_process.h  producer_task.h  task_base.h
examples/common/: aggregator.h  cli_constants.h  dump.h  load.h  producer_constants.h  producer_dump.h  producer_flow.h  producer_process.h  producer_task.h  random.h  show_perf_info.h  show_producer_perf_info.h  task_base.h  temporary_folder.h  tpch_utils.cpp  tpch_utils.h  utils.cpp  utils.h
examples/compile_cli/: CMakeLists.txt  main.cpp
examples/group_cli/: CMakeLists.txt  cli_constants.h  consumer_flow.h  consumer_process.h  consumer_task.h  context.h  main.cpp  params.h  producer_flow.h  producer_process.h  producer_task.h  random.h  task_base.h
examples/join_cli/: CMakeLists.txt  cli_constants.h  main.cpp  params.h  producer_params.h  producer_process.h
examples/mock_aggregate_cli/: CMakeLists.txt  consumer_flow.h  consumer_process.h  consumer_task.h  main.cpp  params.h  producer_flow.h  producer_process.h  producer_task.h
examples/process_cli/: CMakeLists.txt  cli_constants.h  main.cpp  params.h
examples/query_bench_cli/: CMakeLists.txt  main.cpp  utils.h
examples/scan_cli/: CMakeLists.txt  cli_constants.h  main.cpp  params.h
examples/service_benchmark/: CMakeLists.txt  main.cpp
examples/service_cli/: CMakeLists.txt  main.cpp
examples/sql_cli/: CMakeLists.txt  main.cpp
examples/task_scheduler_cli/: CMakeLists.txt  main.cpp  utils.h
examples/utils/: watch.h
mock/: CMakeLists.txt
src/: CMakeLists.txt  channel.h  configuration.h  constants.h  event.h  internal_event.h  namespace.h  request_context.h  utils.h
src/accessor/: namespace.h  record_copier.h  record_ref.h  text.h
src/data/: namespace.h  record_store.h  variable_legnth_buffer.h  variable_legnth_data_region.h
src/executor/: comparator.h  global.h  group_reader.h  namespace.h  partitioner.h  reader_container.h  record_reader.h  record_writer.h
src/jogasaki/: callback.h  channel.h  check_cxx_std.h  commit_common.cpp  commit_common.h  commit_context.h  commit_profile.h  common.h  common_types.h  configuration.h  constants.h  durability_callback.cpp  durability_callback.h  durability_common.cpp  durability_common.h  durability_manager.cpp  durability_manager.h  error.h  event.h  event_channel.h  internal_event.h  logging_helper.h  names.h  request_context.cpp  request_context.h  request_logging.cpp  request_logging.h  request_statistics.cpp  request_statistics.h  termination_state.h  transaction_context.cpp  transaction_context.h  transaction_state.cpp  transaction_state.h  transaction_state_kind.h  utils.h
src/memory/: block_memory_resource.h  fifo_paged_memory_resource.h  lifo_paged_memory_resource.h  monotonic_paged_memory_resource.h  namespace.h  page_pool.h  paged_memory_resource.h
src/meta/: field_type.h  field_type_kind.h  field_type_option.h  field_type_traits.h  group_meta.h  namespace.h  record_meta.h
src/model/: graph.h  namespace.h  port.h  step.h  task.h
src/scheduler/: dag_controller.cpp  dag_controller.h  multi_thread_task_scheduler.h  namespace.h  single_thread_task_scheduler.h  step_state.h  step_state_table.h  task_scheduler.h  task_scheduler_factory.h  thread_params.h
src/tateyama/: basic_task.h  common.h  context.h  task.h  task_scheduler.cpp  task_scheduler.h  task_scheduler_cfg.h
src/utils/: watch.h
test/: CMakeLists.txt  block_memory_resource_test.cpp  comparator_test.cpp  e2e_test.cpp  field_type_test.cpp  fifo_paged_memory_resource_test.cpp  group_meta_test.cpp  isolated_process.h  key.h  key_count.h  lifo_paged_memory_resource_test.cpp  main.cpp  mock_memory_resource.h  monotonic_paged_memory_resource_test.cpp  partitioner_test.cpp  reader_container_test.cpp  reader_interface_test.cpp  record.h  record_copier_test.cpp  record_meta_test.cpp  record_ref_test.cpp  record_store_test.cpp  step_test.cpp  task_scheduler_test.cpp  test_process.h  test_root.h  text_test.cpp  value.h  variable_length_region_test.cpp
test/jogasaki/: basic_group_reader_test.cpp  basic_record.h  basic_record_reader_test.cpp  basic_record_test.cpp  basic_record_writer_test.cpp  block_memory_resource_test.cpp  comparator_test.cpp  compiler_test.cpp  configuration_test.cpp  default_decimal_context_test.cpp  durability_manager_test.cpp  e2e_test.cpp  equal_to_test.cpp  field_type_test.cpp  fifo_paged_memory_resource_test.cpp  group_meta_test.cpp  key.h  key_count.h  kvs_test_base.h  kvs_test_utils.cpp  kvs_test_utils.h  less_test.cpp  lifo_paged_memory_resource_test.cpp  lsan_suppress_test.cpp  mock_memory_resource.h  mock_memory_resource_test.cpp  monotonic_paged_memory_resource_test.cpp  operator_test_utils.h  partitioner_test.cpp  reader_container_test.cpp  reader_interface_test.cpp  record.h  record_copier_test.cpp  record_meta_test.cpp  record_ref_test.cpp  record_store_test.cpp  request_cancel_config_test.cpp  request_context_test.cpp  step_test.cpp  task_scheduler_test.cpp  (+9 more)
test/mock/: mock_task.h  namespace.h  simple_cogroup_process.h  simple_cogroup_process_flow.h  simple_cogroup_process_task.h  simple_emit_process.h  simple_emit_process_flow.h  simple_emit_process_task.h  simple_scan_process.h  simple_scan_process_flow.h  simple_scan_process_task.h  simple_transform_process.h  simple_transform_process_flow.h  simple_transform_process_pretask.h  simple_transform_process_task.h
test/scheduler/: event_test.cpp  multithread_test.cpp
(+2044 files in other folders)
